Move CMS stopped time and concurrent time preprocessing to CMS preprocessor.